# spi_lcd_touch

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
back/: CMakeLists.txt  idf_component.yml  joke.c  joke.h  lvgl_demo_ui copy.c  lvgl_demo_ui.c  lvgl_main_ui.c  lvgl_main_ui.h  microphone.c  spi_lcd_touch_example_main copy.c  spi_lcd_touch_example_main.c  wifi.h  wifi_qr_config.h  wifi_ui.c
main/: Application.cpp  Application.hpp  CMakeLists.txt  JokeService.cpp  JokeService.hpp  MicrophoneService.cpp  MicrophoneService.hpp  QRConfigManager.cpp  QRConfigManager.hpp  Setting.cpp  Setting.hpp  UIComponents.hpp  UIManager.cpp  UIManager.hpp  WiFiManager.cpp  WiFiManager.hpp  lv_conf.h  lvgl_main_ui.c  main.cpp  wifi.c  wifi_ui.h
okc/: microphone.h  spi_lcd_touch_example_main.c  spi_lcd_touch_example_main.h  wifi_qr_config.c
